# reverts

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  install.sh  lefthook.yml  rust-toolchain.toml
crates/reverts-bundle/: Cargo.toml
crates/reverts-bundle/src/: classification.rs  classifier.rs  inner_module.rs  lib.rs  merge.rs
crates/reverts-bundle/src/detectors/: esbuild.rs  esbuild_helpers.rs  mod.rs  rollup_cjs.rs  webpack5.rs
crates/reverts-bundle/tests/: adversarial_fp.rs
crates/reverts-cli/: Cargo.toml
crates/reverts-cli/src/: args.rs  errors.rs  help.rs  input_externalization.rs  lib.rs  main.rs  package_match_usecase.rs  package_source_workflow.rs  project_writer.rs  runtime_dependency_coherence.rs  tests.rs
crates/reverts-cli/src/commands/: binding_names.rs  cluster_names.rs  coverage_ledger.rs  extract_assets.rs  full_inventory.rs  generate_project.rs  identifier_inventory.rs  import_unpacked.rs  island_package_candidates.rs  match_modules.rs  match_packages.rs  mod.rs  module_classify.rs  module_names.rs  naming_gates.rs  naming_plan.rs  naming_progress.rs  ownership_source_names.rs  package_cache.rs  package_surface_decisions.rs  package_version_diagnostics.rs  param_names.rs  reference_source_names.rs  runtime_inventory.rs  symbol_index_io.rs  symbol_names.rs
crates/reverts-cli/src/package_source_workflow/: externalization.rs
crates/reverts-cli/src/persistence/: attributions.rs  externalization_hints.rs  fingerprint_cache.rs  function_attributions.rs  island_anchors.rs  island_package_candidates.rs  mod.rs  package_surfaces.rs  repository.rs  source_cache.rs  synthetic_modules.rs
crates/reverts-cli/src/pkg_sources/: cache.rs  filtering.rs  mod.rs  registry.rs  version_resolution.rs
crates/reverts-cli/tests/: architecture_boundaries.rs  bundle_cascade_e2e.rs  bundle_cascade_schema.sql
crates/reverts-emitter/: Cargo.toml
crates/reverts-emitter/src/: lib.rs
crates/reverts-fixtures/: Cargo.toml
crates/reverts-fixtures/src/: external_corpus.rs  lib.rs
crates/reverts-graph/: Cargo.toml
crates/reverts-graph/src/: cjs_island_modules.rs  function_call_graph.rs  lib.rs  module_init_graph.rs
crates/reverts-graph/src/fingerprint/: access.rs  ast.rs  binding_pattern.rs  callee_set.rs  cfg.rs  cfg_normalized.rs  effect_pattern.rs  expression_shape.rs  extractor.rs  import_specifiers.rs  literal_anchor.rs  literal_shape.rs  mod.rs  property_names.rs  return_pattern.rs  structural_anchor.rs  throw_set.rs
crates/reverts-graph/tests/: axis_calibration.rs  axis_l1_fixtures.rs  cross_version_l2.rs  fingerprint_function_shapes.rs  minifier_resilience_e2e.rs
crates/reverts-input/: Cargo.toml
crates/reverts-input/src/: lib.rs  sqlite.rs
crates/reverts-js/: Cargo.toml
crates/reverts-js/src/: classify.rs  commonjs_exports.rs  commonjs_index_reexports.rs  errors.rs  facts.rs  format.rs  format_module_items.rs  generated_statements.rs  identifier.rs  identifier_inventory.rs  import_coalesce.rs  lazy.rs  lib.rs  local_named_exports.rs  lowering.rs  namespace_flatten.rs  namespace_split.rs  parse.rs  recover.rs  rename_apply.rs  rename_hints.rs  tests.rs  type_annotations.rs
crates/reverts-js/src/normalize/: arrow_body_blocked.rs  boolean_call_to_double_not_guarded.rs  boolean_coercion_canonical.rs  boolean_undefined_canonicalised.rs  bundler_wrapper_unwrapped.rs  closure_boundary_aligned.rs  commonjs_export_boundary_normalized.rs  compound_assignment_canonical.rs  computed_to_static_member.rs  conditional_boolean_coerced.rs  conditional_negation_flipped.rs  conditional_statement_expanded.rs  constant_string_concat_folded.rs  declarator_split.rs  empty_else_block_removed.rs  equality_negation_flattened.rs  for_to_while_finite.rs  (+26 more)
crates/reverts-model/: Cargo.toml
crates/reverts-model/src/: lib.rs
crates/reverts-package-matcher/: Cargo.toml
crates/reverts-package-matcher/src/: acceptance.rs  api.rs  ast_export_helpers.rs  binding_signatures.rs  cascade.rs  cascade_match.rs  commonjs_exports.rs  dependency_closure.rs  dependency_neighborhood.rs  exported_members.rs  external_import_source_index.rs  externalization_policy.rs  force_externalize.rs  graph_neighborhood.rs  import_targets.rs  importable_ownership.rs  lib.rs  matcher.rs  package_helpers.rs  package_version_index.rs  parallel.rs  pipeline.rs  source_evidence.rs  source_text.rs  structural_bag.rs  tests.rs  tier.rs  variant.rs  version.rs  version_scoring.rs  weak_source_equivalent.rs
crates/reverts-package-matcher/tests/: adversarial_fp.rs  global_assignment.rs
crates/reverts-pipeline/: Cargo.toml
crates/reverts-pipeline/src/: assets.rs  audit.rs  canonicalize_require_namespaces.rs  flatten_modules_residue.rs  island_wire_collapse.rs  lib.rs  output_paths.rs  pre_accept.rs  runtime_dependencies.rs  source_mirror.rs  source_rewrites.rs
crates/reverts-pipeline/tests/: external_corpus.rs
crates/reverts-planner/: Cargo.toml
crates/reverts-planner/src/: binding_owner.rs  byte_lexer.rs  class_field_bindings.rs  cli_entrypoint.rs  commonjs_lowering.rs  compiler_preservation.rs  compiler_recovery.rs  complete_coupled_module_function_imports.rs  complete_init_thunk_imports.rs  complete_referenced_imports.rs  complete_runtime_helper_imports.rs  compute_modules.rs  dead_export_prune.rs  decompose_namespace.rs  delazify.rs  delazify_init_chains.rs  destructure_writes.rs  eager_safe_analysis.rs  entrypoint_island_barrel.rs  export_completion.rs  external_adapters.rs  external_package_adapter_emit.rs  helper_declarations.rs  helper_hoisting.rs  identifier_facts.rs  identifiers.rs  import_coalesce.rs  island_clustering.rs  island_split.rs  lazy_initializer_parse.rs  lazy_wrapper_inline.rs  lib.rs  local_bindings.rs  localize_written_imports.rs  migratable_reader_snippet.rs  module_dependency_index.rs  module_planning_context.rs  named_specifiers.rs  node_builtin_require.rs  noop_runtime_helpers.rs  (+34 more)
crates/reverts-rollup-adapter/: Cargo.toml
crates/reverts-rollup-adapter/src/: apply.rs  db.rs  lib.rs
crates/reverts-rollup-adapter/tests/: rollup_fixture.rs  rollup_real_db.rs
(+235 files in other folders)
