[workspace]
members = [
    "crates/reverts-ir",
    "crates/reverts-observe",
    "crates/reverts-output-core",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
rust-version = "1.93"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
correctness = "deny"
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"

