[package]
name = "reverts-bundle"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
oxc_allocator.workspace = true
oxc_ast = "0.42"
oxc_parser.workspace = true
oxc_span.workspace = true
reverts-analyze = { path = "../reverts-analyze" }
reverts-graph = { path = "../reverts-graph" }
reverts-input = { path = "../reverts-input" }
reverts-ir = { path = "../reverts-ir" }
reverts-js = { path = "../reverts-js" }
reverts-observe = { path = "../reverts-observe" }
serde_json = "1"
