[package]
name = "reverts-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
reverts-input = { path = "../reverts-input" }
reverts-observe = { path = "../reverts-observe" }
reverts-pipeline = { path = "../reverts-pipeline" }
