[package]
name = "reverts-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
reverts-bundle = { path = "../reverts-bundle" }
reverts-graph = { path = "../reverts-graph" }
reverts-input = { path = "../reverts-input" }
reverts-ir = { path = "../reverts-ir" }
reverts-observe = { path = "../reverts-observe" }
reverts-package-matcher = { path = "../reverts-package-matcher" }
reverts-pipeline = { path = "../reverts-pipeline" }
rusqlite = { version = "0.33", features = ["bundled"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
