[package]
name = "reverts-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
reverts-analyze = { path = "../reverts-analyze" }
reverts-graph = { path = "../reverts-graph" }
reverts-input = { path = "../reverts-input" }
reverts-ir = { path = "../reverts-ir" }
reverts-js = { path = "../reverts-js" }
reverts-model = { path = "../reverts-model" }
reverts-observe = { path = "../reverts-observe" }
reverts-package = { path = "../reverts-package" }
reverts-package-matcher = { path = "../reverts-package-matcher" }
reverts-pipeline = { path = "../reverts-pipeline" }
rusqlite = { version = "0.33", features = ["bundled"] }
semver = "1"
serde_json = "1"

[dev-dependencies]
tempfile = "3"
