[package]
name = "reverts-emitter"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
reverts-ir = { path = "../reverts-ir" }
reverts-js = { path = "../reverts-js" }
reverts-package = { path = "../reverts-package" }
reverts-planner = { path = "../reverts-planner" }
