[package]
name = "reverts-fixtures"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
reverts-input = { path = "../reverts-input" }
reverts-ir = { path = "../reverts-ir" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
