[package]
name = "reverts-js"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
oxc_allocator.workspace = true
oxc_ast = "0.42"
oxc_codegen.workspace = true
oxc_parser.workspace = true
oxc_semantic = "0.42"
oxc_span.workspace = true
oxc_transformer = "0.42"
reverts-ir = { path = "../reverts-ir" }
