[package]
name = "reverts-package-matcher"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
reverts-input = { path = "../reverts-input" }
reverts-ir = { path = "../reverts-ir" }
reverts-js = { path = "../reverts-js" }
reverts-observe = { path = "../reverts-observe" }
