[package]
name = "reverts-package-matcher"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
oxc_allocator.workspace = true
oxc_ast = "0.42"
oxc_parser.workspace = true
oxc_span.workspace = true
reverts-graph = { path = "../reverts-graph" }
reverts-input = { path = "../reverts-input" }
reverts-ir = { path = "../reverts-ir" }
reverts-js = { path = "../reverts-js" }
reverts-observe = { path = "../reverts-observe" }
reverts-package = { path = "../reverts-package" }
reverts-package-index = { path = "../reverts-package-index" }
semver = "1"
serde_json = "1"
