[package]
name = "reverts-pipeline"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
reverts-analyze = { path = "../reverts-analyze" }
reverts-bundle = { path = "../reverts-bundle" }
reverts-emitter = { path = "../reverts-emitter" }
reverts-input = { path = "../reverts-input" }
reverts-ir = { path = "../reverts-ir" }
reverts-js = { path = "../reverts-js" }
reverts-model = { path = "../reverts-model" }
reverts-observe = { path = "../reverts-observe" }
reverts-planner = { path = "../reverts-planner" }
semver = "1"

[dev-dependencies]
reverts-fixtures = { path = "../reverts-fixtures" }
