[package]
name = "reverts-planner"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
reverts-graph = { path = "../reverts-graph" }
reverts-ir = { path = "../reverts-ir" }
reverts-package = { path = "../reverts-package" }
