[package]
name = "reverts-rollup-adapter"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
reverts-analyze = { path = "../reverts-analyze" }
reverts-input = { path = "../reverts-input" }
reverts-ir = { path = "../reverts-ir" }
reverts-package = { path = "../reverts-package" }
rusqlite = { version = "0.33", features = ["bundled"] }
serde_json = "1"
